# tryapplypilot

./: .gitignore  README.md  ROADMAP.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  audit_logs.py  auth.py  catalog.py  company_catalog_defaults.py  company_requests.py  config.py  domain.py  http.py  job_filters.py  job_lifecycle.py  job_metadata.py  logging_utils.py  main.py  maintenance_service.py  market_scout.py  notification_delivery.py  poller.py  preferences.py  resume_library.py  retry.py  runtime.py  saved_jobs.py  scheduler_service.py  scoring.py  telegram_cli.py  user_accounts.py  user_job_sync.py  user_matching.py  user_watchlists.py
backend/app/connectors/: __init__.py  amazon_jobs.py  ashby.py  base.py  comeet.py  google_careers.py  greenhouse.py  icims.py  jobvite.py  lever.py  microsoft_careers.py  registry.py  workday.py  (+3 more)
backend/tests/: test_admin_connectors.py  test_amazon_connector.py  test_ashby_connector.py  test_auth.py  test_catalog.py  test_comeet_connector.py  test_dashboard_service.py  test_google_connector.py  test_icims_connector.py  test_job_filters.py  test_job_lifecycle.py  test_job_metadata.py  test_jobvite_connector.py  test_lever_connector.py  test_main_catalog_access.py  test_market_scout.py  test_microsoft_connector.py  test_notification_delivery.py  test_oracle_recruiting_cloud_connector.py  test_postgres_sources.py  test_resume_library.py  test_runtime_infrastructure.py  test_smartrecruiters_connector.py  test_successfactors_connector.py  test_telegram.py  test_user_matching.py  test_workday_connector.py
(+125 files in other folders)
