[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-job-hunter-os-backend"
version = "0.1.0"
description = "FastAPI backend for the AI Job Hunter OS foundation."
requires-python = ">=3.12"
dependencies = [
  "argon2-cffi>=23.1.0,<24.0.0",
  "asyncpg>=0.30.0,<1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "pypdf>=6.14.0,<7.0.0",
  "PyJWT>=2.9.0,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "truststore>=0.10.1,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
